{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 35,
  "lineage": "0903bc7c-42a6-ef6e-d901-23d82c8bba83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c0a551d0459e9d39",
            "arn": "arn:aws:ec2:ca-central-1:572163714717:instance/i-0161019f6ce2cf951",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0161019f6ce2cf951",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096cf10740ad7236e",
            "private_dns": "ip-10-0-0-180.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.180",
            "public_ip": "35.183.61.213",
            "region": "ca-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08c9c0b597fae9b7b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f0d401f1a70f5cd",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a32a63b14766874"
            ]
          },
          "dependencies": [
            "aws_security_group.SG",
            "aws_subnet.sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:572163714717:internet-gateway/igw-036c72aff3927f092",
            "id": "igw-036c72aff3927f092",
            "owner_id": "572163714717",
            "region": "ca-central-1",
            "tags": {
              "Name": "main-gateway"
            },
            "tags_all": {
              "Name": "main-gateway"
            },
            "vpc_id": "vpc-0a1dd86bea6d05816"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:loadbalancer/app/web-alb/f4736ad757cdec26",
            "arn_suffix": "app/web-alb/f4736ad757cdec26",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-1212640215.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:loadbalancer/app/web-alb/f4736ad757cdec26",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "preserve_host_header": false,
            "region": "ca-central-1",
            "security_groups": [
              "sg-02a32a63b14766874"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f0d401f1a70f5cd"
              },
              {
                "subnet_id": "subnet-0e0bcca0d40805787"
              }
            ],
            "subnets": [
              "subnet-04f0d401f1a70f5cd",
              "subnet-0e0bcca0d40805787"
            ],
            "tags": {
              "Name": "web-alb"
            },
            "tags_all": {
              "Name": "web-alb"
            },
            "vpc_id": "vpc-0a1dd86bea6d05816",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.SG",
            "aws_subnet.sub1",
            "aws_subnet.sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:listener/app/web-alb/f4736ad757cdec26/39816ea3d24d2cd3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:targetgroup/web-tg/6d6837f51b937a13",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:listener/app/web-alb/f4736ad757cdec26/39816ea3d24d2cd3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:loadbalancer/app/web-alb/f4736ad757cdec26",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ca-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "WebListener"
            },
            "tags_all": {
              "Name": "WebListener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_lb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.SG",
            "aws_subnet.sub1",
            "aws_subnet.sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:targetgroup/web-tg/6d6837f51b937a13",
            "arn_suffix": "targetgroup/web-tg/6d6837f51b937a13",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:targetgroup/web-tg/6d6837f51b937a13",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:572163714717:loadbalancer/app/web-alb/f4736ad757cdec26"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ca-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "WebTargetGroup"
            },
            "tags_all": {
              "Name": "WebTargetGroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a1dd86bea6d05816"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:targetgroup/web-tg/6d6837f51b937a13-20250714202302960900000001",
            "port": 80,
            "region": "ca-central-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:572163714717:targetgroup/web-tg/6d6837f51b937a13",
            "target_id": "i-0161019f6ce2cf951"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb.web_lb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.SG",
            "aws_subnet.sub1",
            "aws_subnet.sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:572163714717:route-table/rtb-0c5ae9e77abbe6f61",
            "id": "rtb-0c5ae9e77abbe6f61",
            "owner_id": "572163714717",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036c72aff3927f092",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-route-table"
            },
            "tags_all": {
              "Name": "main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1dd86bea6d05816"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb6ba22434501e05",
            "region": "ca-central-1",
            "route_table_id": "rtb-0c5ae9e77abbe6f61",
            "subnet_id": "subnet-04f0d401f1a70f5cd"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093506c3f95f0e4f7",
            "region": "ca-central-1",
            "route_table_id": "rtb-0c5ae9e77abbe6f61",
            "subnet_id": "subnet-0e0bcca0d40805787"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:572163714717:security-group/sg-02a32a63b14766874",
            "description": "Allow all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a32a63b14766874",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG",
            "name_prefix": "",
            "owner_id": "572163714717",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-security-group"
            },
            "tags_all": {
              "Name": "main-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1dd86bea6d05816"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:572163714717:subnet/subnet-04f0d401f1a70f5cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f0d401f1a70f5cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "572163714717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0a1dd86bea6d05816"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:572163714717:subnet/subnet-0e0bcca0d40805787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0bcca0d40805787",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "572163714717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0a1dd86bea6d05816"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:572163714717:vpc/vpc-0a1dd86bea6d05816",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062e2aacd5242ed05",
            "default_route_table_id": "rtb-00fe3bec5d45122df",
            "default_security_group_id": "sg-0da5f375fd00c8a66",
            "dhcp_options_id": "dopt-0c2da7bb2e697075e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1dd86bea6d05816",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fe3bec5d45122df",
            "owner_id": "572163714717",
            "region": "ca-central-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}